--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Left Container -->
         <section id="container-left" >
             <section id="non-scroll">
-                <a href="./"><img id="logo_inshorts" src="./assets/images/mynewsfeedlogo.png"></a>
+                <a href="./"><img id="logo_inshorts" src="/NEWSFEED---Javascript-Project---cofaoesype6c/image/mynewsfeedlogo.png"></a>
                 <i class="fa-solid fa-bars" id="humburger"> <span>Menu</span></i>
                 <section id="container-left--buttons">
                     <button id="new-news" class="button border-bottom"><h3>New News</h3></button>
