--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section id="container-left" >
             <section id="non-scroll">
                 <a href="./"><img id="logo_inshorts" src="/NEWSFEED---Javascript-Project---cofaoesype6c/image/mynewsfeedlogo.png"></a>
-                <i class="fa-solid fa-bars" id="humburger"> <span>Menu</span></i>
+                <i class="fa-solid fa-bars" id="humburger"> <span class="humburger-text">Menu</span></i>
                 <section id="container-left--buttons">
                     <button id="new-news" class="button border-bottom"><h3>New News</h3></button>
                     <button id="saved-news" class="button"><h3>Saved News</h3></button>
