--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body >
     <div id="container">
+        <i class="fa-solid fa-moon" id="toggle-dark"></i>
         <!-- Left Container -->
         <section id="container-left" >
             <section id="non-scroll">
@@ -49,7 +50,6 @@
                         placeholder="Search by content..."
                         autocomplete="off"/>
                         <button for="search-bar--input" class="button" id="search-bar--button">Search</button>
-                        <button id="toggle-dark">Dark Mode</button>
                     </section>
                 <!-- </a> -->
             </header>
