--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </head>
 <body >
     <div id="container">
-        <i class="fa-solid fa-moon" id="toggle-dark"></i>
+        <section id="dark-mode-section">
+            <h4 id="mode-text">Dark</h4>
+            <i class="fa-solid fa-moon" id="toggle-dark"></i>
+        </section>
         <!-- Left Container -->
         <section id="container-left" >
             <section id="non-scroll">
